--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-reanimated": "^2.9.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.14.1",
+    "react-native-vector-icons": "^9.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
