챌린지 만들기 버튼/모달 생성, 적용

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -319,7 +319,7 @@ def isNewArchitectureEnabled() {
 }
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'FontAwesome5.ttf', 'MaterialIcons.ttf', 'Ionicons.ttf' ]
+    iconFontNames: [ 'FontAwesome5.ttf', 'MaterialIcons.ttf', 'Ionicons.ttf', 'Octicons.ttf' ]
 ]
 
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
